--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
   margin: 0 auto;
-  max-width: 1920px;
+  /* max-width: 2000px; */
+  min-width: 1024px;
   background-color: #f5f5f7;
 }
 /* hero */
@@ -140,8 +141,14 @@ li {
 .hero-list {
   display: flex;
   gap: 28px;
-  justify-content: center;
   margin-bottom: 76px;
+  padding-left: 140px;
+  overflow: scroll;
+  scroll-snap-type: x mandatory;
+}
+
+.hero-list::-webkit-scrollbar {
+  display: none;
 }
 
 .hero-list-product {
@@ -283,6 +290,7 @@ section::-webkit-scrollbar {
   background-color: #ffffff;
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.08);
   position: relative;
+  flex-shrink: 0;
 }
 
 .scroll-product-image {
@@ -422,14 +430,6 @@ section::-webkit-scrollbar {
 }
 
 .scroll-box-small {
-  font-family: inter;
-  font-size: 22px;
-  line-height: 28px;
-  font-weight: 700;
-  color: #1d1d1f;
-}
-
-.scroll-box-small {
   height: 240px;
   width: 313px;
   background-color: #ffffff;
@@ -437,4 +437,189 @@ section::-webkit-scrollbar {
   box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.08);
   flex-shrink: 0;
   margin-bottom: 20px;
+  padding-left: 30px;
+  padding-top: 82px;
+  padding-right: 35px;
+  box-sizing: border-box;
+}
+
+.scroll-box-content {
+  font-family: inter;
+  font-size: 22px;
+  line-height: 28px;
+  font-weight: 700;
+  color: #1d1d1f;
+  width: 100%;
+}
+
+.scroll-box-content-1 {
+  font-family: inter;
+  font-size: 22px;
+  line-height: 28px;
+  font-weight: 700;
+  color: #1d1d1f;
+  margin-top: -14px;
+}
+
+.scroll-4-box-1-text {
+  position: absolute;
+  top: 54px;
+  left: 30px;
+  width: 305px;
+  font-family: inter;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 32px;
+  color: #1d1d1f;
+}
+
+.scroll-4-box-text {
+  font-family: inter;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 16px;
+  color: #6e6e73;
+  position: absolute;
+  top: 31px;
+  left: 30px;
+  margin-bottom: 9px;
+}
+
+/* scroll-5 */
+.scroll-5 {
+  display: flex;
+  gap: 20px;
+  padding-left: 140px;
+  box-sizing: border-box;
+  overflow: scroll;
+  scroll-snap-type: x mandatory;
+  margin-bottom: 40px;
+}
+
+.scroll-5::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-5-box {
+  width: 480px;
+  position: relative;
+}
+
+.scroll-5-box-text {
+  font-family: inter;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #1d1d1f;
+  position: absolute;
+  width: 259px;
+  left: 30px;
+  top: 130px;
+}
+
+.scroll-4-box-text-white {
+  color: #f5f5f7;
+  font-family: inter;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 16px;
+  position: absolute;
+  top: 31px;
+  left: 30px;
+  margin-bottom: 9px;
+}
+
+.scroll-4-box-1-text-white {
+  color: #ffffff;
+  position: absolute;
+  top: 54px;
+  left: 30px;
+  width: 305px;
+  font-family: inter;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+/* scroll-6 */
+.scroll-6 {
+  display: flex;
+  gap: 20px;
+  padding-left: 140px;
+  box-sizing: border-box;
+  overflow: scroll;
+  scroll-snap-type: x mandatory;
+  margin-bottom: 60px;
+}
+
+.scroll-6::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-6-box {
+  width: 400px;
+  position: relative;
+}
+
+.scroll-6-image {
+  border-radius: 18px;
+  height: 500px;
+  width: 400px;
+  box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.08);
+}
+
+.scroll-6-box-text {
+  font-family: inter;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #1d1d1f;
+  position: absolute;
+  width: 259px;
+  left: 30px;
+  top: 158px;
+}
+
+.scroll-6-box-1-text {
+  color: #ffffff;
+  position: absolute;
+  top: 54px;
+  left: 30px;
+  width: 305px;
+  font-family: inter;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+/* footer */
+footer {
+  font-family: inter;
+  padding-left: 140px;
+}
+
+.footer-title {
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 32px;
+  color: #1d1d1f;
+  margin-bottom: 24px;
+}
+
+.footer-btn {
+  margin-left: 8px;
+  align-items: center;
+}
+
+.btn {
+  padding: 10px 12px;
+  border: 1px solid #1d1d1f;
+  border-radius: 999px;
+  margin-right: 12px;
+  margin-bottom: 100px;
+}
+
+.footer-link {
+  text-decoration: none;
+  color: #1d1d1f;
 }
