--- a/main.css
+++ b/main.css
@@ -3,47 +3,65 @@ body {
   /* max-width: 2000px; */
   min-width: 1024px;
   background-color: #f5f5f7;
+  font-family: inter;
 }
 /* HERO */
 
-/* NAV BAR */
-ul {
-  list-style-type: none;
+/* HEADER */
+header {
   display: flex;
-  gap: 24px;
-  font-family: inter;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 60px;
-  letter-spacing: -0.28px;
-  width: 100%;
-  height: 44px;
-  background-color: rgba(245, 245, 247, 0.8);
-  color: #000000;
-  margin: 0 auto;
   align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-}
-li {
-  white-space: nowrap;
+  justify-content: space-between;
+  height: 48px;
+  background-color: rgba(245, 245, 247, 0.8);
 }
 
-.header-link {
-  text-decoration: none;
-  color: #000000;
+.menu {
+  display: none;
 }
 
 .logo {
+  width: 48px;
+  height: 48px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
-.menu-icon {
+.top-icons {
+  display: flex;
+}
+
+.icon-btn {
+  width: 48px;
+  height: 48px;
   display: flex;
   justify-content: center;
-  gap: 24px;
+  align-items: center;
+  background-color: transparent;
+  border: 0;
 }
+
+@media (min-width: 1000px) {
+  .menu {
+    display: block;
+    display: flex;
+    gap: 24px;
+  }
+  .menu > a {
+    font-size: 12px;
+    text-decoration: none;
+    color: black;
+  }
+  header {
+    justify-content: center;
+    gap: 10px;
+  }
+  .icon-btn:nth-child(3) {
+    display: none;
+  }
+}
+/* END OF HEADER */
 
 /* AD */
 .ad {
